@@ -2,6 +2,7 @@
 	+ Bugfix: Don't assume timecol is 'timestamp' but defined by
 	module developer. This allows to purge some logs tables again
 	+ Add page titles to models
+	+ Set default values when not given in `add` method in models
 0.11.103
 	+ Modify EBox::Types::HasMany to create directory based on its row 
 	+ Add _setRelationship method to set up relationships between models
